tests/machine/x/swift/q1.error
tmp.swift:44:5: error: the compiler is unable to type-check this expression in reasonable time; try breaking up the expression into distinct sub-expressions
42 | 
43 | var lineitem = [Auto1(l_discount: 0.05, l_extendedprice: 1000.0, l_linestatus: "O", l_quantity: 17, l_returnflag: "N", l_shipdate: "1998-08-01", l_tax: 0.07), Auto1(l_discount: 0.1, l_extendedprice: 2000.0, l_linestatus: "O", l_quantity: 36, l_returnflag: "N", l_shipdate: "1998-09-01", l_tax: 0.05), Auto1(l_discount: 0.0, l_extendedprice: 1500.0, l_linestatus: "F", l_quantity: 25, l_returnflag: "R", l_shipdate: "1998-09-03", l_tax: 0.08)]
44 | var result = { () -> [Any] in
   |     `- error: the compiler is unable to type-check this expression in reasonable time; try breaking up the expression into distinct sub-expressions
45 |     var _groups: [String:_Group] = [:]
46 |     var _order: [String] = []

tmp.swift:14:27: warning: conditional cast from 'Any' to 'Any' always succeeds
12 |         return x
13 |     }
14 |     if let obj = _sort(v) as? Any,
   |                           `- warning: conditional cast from 'Any' to 'Any' always succeeds
15 |        let data = try? JSONSerialization.data(withJSONObject: obj),
16 |        let s = String(data: data, encoding: .utf8) {
