tests/machine/x/swift/q1.swift
// Generated by Mochi compiler v0.10.25 on 2025-07-13T08:03:57Z
import Foundation

func _json(_ v: Any) {
    func _sort(_ x: Any) -> Any {
        if let a = x as? [Any] { return a.map { _sort($0) } }
        if let m = x as? [String:Any] {
            var out: [String:Any] = [:]
            for k in m.keys.sorted() { out[k] = _sort(m[k]!) }
            return out
        }
        return x
    }
    if let obj = _sort(v) as? Any,
       let data = try? JSONSerialization.data(withJSONObject: obj),
       let s = String(data: data, encoding: .utf8) {
        print(s)
    }
}
class _Group {
    var key: Any
    var Items: [Any] = []
    init(_ k: Any) { self.key = k }
}

func _keyStr(_ v: Any) -> String {
    if let data = try? JSONSerialization.data(withJSONObject: v, options: [.sortedKeys]),
       let s = String(data: data, encoding: .utf8) {
        return s
    }
    return String(describing: v)
}
struct Auto1: Equatable {
    var l_discount: Double
    var l_extendedprice: Double
    var l_linestatus: String
    var l_quantity: Int
    var l_returnflag: String
    var l_shipdate: String
    var l_tax: Double
}

var lineitem = [Auto1(l_discount: 0.05, l_extendedprice: 1000.0, l_linestatus: "O", l_quantity: 17, l_returnflag: "N", l_shipdate: "1998-08-01", l_tax: 0.07), Auto1(l_discount: 0.1, l_extendedprice: 2000.0, l_linestatus: "O", l_quantity: 36, l_returnflag: "N", l_shipdate: "1998-09-01", l_tax: 0.05), Auto1(l_discount: 0.0, l_extendedprice: 1500.0, l_linestatus: "F", l_quantity: 25, l_returnflag: "R", l_shipdate: "1998-09-03", l_tax: 0.08)]
var result = { () -> [Any] in
    var _groups: [String:_Group] = [:]
    var _order: [String] = []
    for row in lineitem.filter { row in row.l_shipdate <= "1998-09-02" } {
        let _k = ["returnflag": row.l_returnflag, "linestatus": row.l_linestatus]
        let _ks = _keyStr(_k)
        if _groups[_ks] == nil {
            _groups[_ks] = _Group(_k)
            _order.append(_ks)
        }
        _groups[_ks]!.Items.append(row)
    }
    var _tmp: [(key: [String:Any], items: [Auto1])] = []
    for k in _order {
        if let g = _groups[k] {
            _tmp.append((key: g.key as! [String:Any], items: g.Items.map { $0 as! Auto1 }))
        }
    }
    return _tmp.map { g in ["returnflag": g.key.returnflag, "linestatus": g.key.linestatus, "sum_qty": g.items.map { x in x.l_quantity }.reduce(0, +), "sum_base_price": g.items.map { x in x.l_extendedprice }.reduce(0, +), "sum_disc_price": g.items.map { x in x.l_extendedprice * Double((Double(1) - x.l_discount)) }.reduce(0, +), "sum_charge": g.items.map { x in x.l_extendedprice * Double((Double(1) - x.l_discount)) * Double((Double(1) + x.l_tax)) }.reduce(0, +), "avg_qty": (g.items.map { x in x.l_quantity }.reduce(0, +) / g.items.map { x in x.l_quantity }.count), "avg_price": (g.items.map { x in x.l_extendedprice }.reduce(0, +) / g.items.map { x in x.l_extendedprice }.count), "avg_disc": (g.items.map { x in x.l_discount }.reduce(0, +) / g.items.map { x in x.l_discount }.count), "count_order": g.items.count] }
}()
_json(result)
assert(result == [["returnflag": "N", "linestatus": "O", "sum_qty": 53, "sum_base_price": 3000, "sum_disc_price": 950.0 + 1800.0, "sum_charge": (950.0 * 1.07) + (1800.0 * 1.05), "avg_qty": 26.5, "avg_price": 1500, "avg_disc": 0.07500000000000001, "count_order": 2]])
